# TLogger

./: .gitignore  .travis.yml  CMakeLists.txt  FindTLogger.cmake  README.md  TLoggerConfig.cmake  tlogger-config.cmake.in
Code/TLogger/inc/: TLogger.h
Code/TLogger/src/: TLogger.cpp
Test/: CMakeLists.txt
Test/Exe/: Tester
Test/src/TLoggerTests/: TLoggetTest.cpp
